# almanack

./: .alexignore  .buildinfo  .gitignore  .linkcheckerrc.ini  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .vale.ini  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  coverage.xml  genindex.html  introduction.html  objects.inv  pa11y.json  package-lock.json  package.json  py-modindex.html  pyproject.toml  sbom.json  search.html  searchindex.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/actions/install-node-env/: action.yml
.github/actions/install-python-env/: action.yml
.github/workflows/: dependabot-pre-commit.yaml  deploy-book.yml  entropy-check.yml  pre-commit-checks.yml  publish-pypi.yml  pytest-tests.yml  test-github-env.yml  test-links.yml
_modules/: index.html
_modules/almanack/: book.html  cli.html  git.html
_modules/almanack/metrics/: data.html  remote.html
_modules/almanack/metrics/entropy/: calculate_entropy.html  processing_repositories.html
_modules/almanack/metrics/garden_lattice/: connectedness.html  practicality.html  understanding.html
_modules/almanack/reporting/: report.html
_posters/2025/: readme.html
_sources/: introduction.md
_sources/checks/: SGA-GL-0001.md  SGA-GL-0002.md  SGA-GL-0003.md  SGA-GL-0004.md  SGA-GL-0005.md  SGA-GL-0006.md  SGA-GL-0007.md  SGA-GL-0015.md  SGA-GL-0017.md  SGA-GL-0025.md  SGA-GL-0026.md  index.md
_sources/garden-circle/: contributing.md  garden-circle.md  pavilion.md
_sources/garden-lattice/: garden-lattice.md  understanding.md
_sources/seed-bank/: seed-bank.md
_sources/seed-bank/almanack-example/: almanack-example.ipynb
_sources/seed-bank/pubmed-github-repositories/: gather-software-information-entropy.ipynb
_sources/software-forest/: software-forest.md
_sources/verdant-sundial/: verdant-sundial.md
_static/: custom.css
checks/: SGA-GL-0001.html  SGA-GL-0002.html  SGA-GL-0003.html  SGA-GL-0004.html  SGA-GL-0005.html  SGA-GL-0006.html  SGA-GL-0007.html  SGA-GL-0015.html  SGA-GL-0017.html  SGA-GL-0025.html  SGA-GL-0026.html  index.html
docs/: readme.md
garden-circle/: contributing.html  garden-circle.html  garden-map.html  package-api.html  pavilion.html
garden-lattice/: garden-lattice.html  understanding.html
seed-bank/: seed-bank.html
seed-bank/almanack-example/: almanack-example.html
seed-bank/pubmed-github-repositories/: gather-software-information-entropy.html
software-forest/: software-forest.html
src/almanac/: __init__.py  _config.yml  _toc.yml  book.py  introduction.md  preface.md  references.bib
src/almanac/_static/: custom.css
src/almanac/garden-circle/: contributing.md  garden-map.md
src/almanac/verdant-sundial/: verdant-sundial.md
src/almanack/: __init__.py  book.py  cli.py  entropy.py  git.py  git_parser.py  repo_helper.py
src/almanack/metrics/: data.py  metrics.yml  remote.py
src/almanack/metrics/entropy/: calculate_entropy.py  processing_repositories.py
src/almanack/metrics/garden_lattice/: connectedness.py  practicality.py  understanding.py
src/almanack/processing/: calculate_entropy.py  compute_data.py  git_operations.py  processing_repositories.py
src/almanack/reporting/: cli.py  report.py
src/book/: _config.yml  _toc.yml  introduction.md  references.bib
src/book/_ext/: gen_check_pages.py
src/book/_posters/2025/: poster.qmd  readme.md
src/book/_static/: custom.css
src/book/_templates/: check_template.md.j2
src/book/garden-circle/: contributing.md  garden-circle.md  garden-map.md  package-api.md
src/book/garden-lattice/: understanding.md
src/book/seed-bank/: seed-bank.md
src/book/seed-bank/pubmed-github-repositories/: .visualize-pubmed-repo-sofware-entropy.ipynb.icloud  gather-software-information-entropy.ipynb
src/book/seed-bank/pubmed-github-repositories/gather-pubmed-repos/: generate_data.py  generate_github_enriched_data.py  pubmed_github_links.parquet  pubmed_github_links_with_github_data.parquet
src/book/seed-bank/pubmed-github-repositories/repository_analysis_results/: repository_analysis_results_batch_1.parquet  repository_analysis_results_batch_10.parquet  repository_analysis_results_batch_11.parquet  repository_analysis_results_batch_12.parquet  repository_analysis_results_batch_13.parquet  repository_analysis_results_batch_14.parquet  repository_analysis_results_batch_15.parquet  repository_analysis_results_batch_16.parquet  repository_analysis_results_batch_17.parquet  repository_analysis_results_batch_18.parquet  repository_analysis_results_batch_19.parquet  repository_analysis_results_batch_2.parquet  repository_analysis_results_batch_20.parquet  repository_analysis_results_batch_3.parquet  repository_analysis_results_batch_4.parquet  repository_analysis_results_batch_5.parquet  repository_analysis_results_batch_6.parquet  repository_analysis_results_batch_7.parquet  repository_analysis_results_batch_8.parquet  repository_analysis_results_batch_9.parquet
src/book/software-forest/: software-forest.md
styles/config/vocabularies/almanac/: accept.txt
styles/config/vocabularies/almanack/: accept.txt
tests/: conftest.py  test_almanac.py  test_almanack.py  test_build.py  test_cli.py  test_compute_data.py  test_entropy.py  test_git.py  test_git_operations.py  test_git_parser.py  test_processing_repositories.py  test_report.py  test_repository_processing.py  utils.py
tests/data/almanack/coverage/python/: coverage.json  (+1 more)
tests/data/almanack/entropy/: add_data.py  add_entropy.py
tests/data/almanack/high_entropy/: high_entropy.md
tests/data/almanack/repo_setup/: create_repo.py  insert_code.py
tests/data/jupyter-book/: add_data.py  add_data_to_dataset(s).py  add_entropy.py  sandbox.md
tests/data/jupyter-book/high_entropy/: high_entropy.md
tests/data/jupyter-book/low_entropy/: low_entropy.md
tests/metrics/: test_calculate_entropy.py  test_community_health.py  test_data.py  test_garden_lattice.py
tests/metrics/entropy/: test_calculate_entropy.py
verdant-sundial/: verdant-sundial.html
(+3 files in other folders)
